--- a/style.css
+++ b/style.css
@@ -440,15 +440,15 @@ section .title::after {
 }
 
 .skills-content .right .html::before {
-    width: 90%;
+    width: 50%;
 }
 
 .skills-content .right .css::before {
-    width: 60%;
+    width: 50%;
 }
 
 .skills-content .right .js::before {
-    width: 80%;
+    width: 50%;
 }
 
 .skills-content .right .php::before {
@@ -463,7 +463,7 @@ section .title::after {
 /* teams section styling */
 
 .teams .title::after {
-    content: "who with me";
+    content: "WHO With Me";
 }
 
 .teams .carousel .card {
